Add zenderator as a dependency, because it is.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": "^7.0",
     "php-school/cli-menu": "^2.0.0",
     "kint-php/kint": "^2.0",
-    "segura/zenderator": "^0.3.0"
+    "segura/zenderator": "*"
   },
   "autoload": {
     "psr-4": {
