--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
   ],
   "require": {
     "php": "^7.1",
+    "segura/appcore": "*",
     "php-school/cli-menu": "^2.0.0",
     "kint-php/kint": "^2.0",
     "mattketmo/camel": "^1.1",
     "gone.io/inflection": "^2.0",
     "squizlabs/php_codesniffer": "^2.7",
     "deweller/cliopts": "^1.0",
-    "gone.io/twig-extension-transform": "^1.0"
+    "gone.io/twig-extension-transform": "^1.0",
+    "fzaninotto/faker": "^1.6.0"
   },
   "suggest":{
     "segura/zenderator": "Segura Core Zenderator"
