--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,15 @@
   "bin": [
     "automize"
   ],
+  "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:segurasystems/AppCore.git"
+        }
+    ],
   "require": {
     "php": "^7.1",
-    "gone.io/appcore": "*",
+    "gone.io/appcore": "dev-master",
     "php-school/cli-menu": "^2.0.0",
     "kint-php/kint": "^2.0",
     "mattketmo/camel": "^1.1",
