--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
   "require": {
     "php": "^7.1",
-    "gone.io/appcore": "dev-master",
+    "gone.io/appcore": "dev-segura",
     "php-school/cli-menu": "^2.0.0",
     "kint-php/kint": "^2.0",
     "mattketmo/camel": "^1.1",
